--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /ConsoleApp4/.vs/ConsoleApp4/v15/Server/sqlite3
+/ConsoleApp4/.vs/ConsoleApp4/v15
+/.vs
